[IMP] Improved field to readonly.

--- a/quickbooks_online_odoo_connector/views/quickbooks_view.xml
+++ b/quickbooks_online_odoo_connector/views/quickbooks_view.xml
@@ -14,7 +14,7 @@
                         <group>
                         <field name="company_include_tax"/>
                         <field name="auto_export_moves"/>
-                        <field name="export_moves_point_date" invisible="not auto_export_moves"/>
+                        <field name="export_moves_point_date" readonly="state == 'connected'" invisible="not auto_export_moves"/>
                         </group>
                         <group>
                             <field name="auto_export_payments"/>
