--- a/quickbooks_odoo_connector_canada/views/qkb_product_map_view.xml
+++ b/quickbooks_odoo_connector_canada/views/qkb_product_map_view.xml
@@ -1,7 +1,7 @@
 <odoo>
-    <record id="view_qkb_product_list" model="ir.ui.view">
-        <field name="name">qbo.product.vts.list</field>
-        <field name="model">qbo.product.vts</field>
+    <record id="view_qkb_product_ca_list" model="ir.ui.view">
+        <field name="name">qbo.product.ca.map.vts.list</field>
+        <field name="model">qbo.product.ca.map.vts</field>
         <field name="arch" type="xml">
             <list string="Quickbooks Account" editable="bottom">
                 <field name="quickbook_instance_id" readonly="1"/>
@@ -12,14 +12,13 @@
             </list>
         </field>
     </record>
-    <record id="action_qkb_product_map" model="ir.actions.act_window">
+    <record id="action_qkca_product_map" model="ir.actions.act_window">
         <field name="name">Quickbooks Product</field>
-        <field name="res_model">qbo.product.vts</field>
+        <field name="res_model">qbo.product.ca.map.vts</field>
         <field name="view_mode">list</field>
-        <field name="view_id" ref="view_qkb_product_list"/>
     </record>
-    <menuitem id="menu_qkb_product"
+    <menuitem id="menu_qkca_product"
               name="Product"
               parent="quickbooks_connector_vts.main_mapping_menu"
-              action="action_qkb_product_map" sequence="1"/>
+              action="action_qkca_product_map" sequence="1"/>
 </odoo>
