--- a/quickbooks_odoo_connector_canada/views/quickbooks_view.xml
+++ b/quickbooks_odoo_connector_canada/views/quickbooks_view.xml
@@ -6,8 +6,8 @@
         <field name="inherit_id" ref="quickbooks_connector_vts.quickbooks_connect_form_view"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='account_creation']" position="after">
-                <field name="product_creation"/>
-                <field name="vendor_creation"/>
+                <field name="qkca_product_creation"/>
+                <field name="qkca_vendor_creation"/>
             </xpath>
             <xpath expr="//div[@class='oe_button_box']" position="inside">
                 <button name="action_qkb_product"
@@ -17,7 +17,7 @@
                     <div class="o_field_widget o_stat_info">
                         <span class="o_stat_text">Product</span>
                         <span class="o_stat_value">
-                            <field name="qck_product_count"/>
+                            <field name="qca_product_count"/>
                         </span>
                     </div>
                 </button>
@@ -28,7 +28,7 @@
                     <div class="o_field_widget o_stat_info">
                         <span class="o_stat_text">Vendor</span>
                         <span class="o_stat_value">
-                            <field name="qck_vendor_count"/>
+                            <field name="qca_vendor_count"/>
                         </span>
                     </div>
                 </button>
