[ADD] Added latest canada improvement code

--- a/quickbooks_odoo_connector_canada/wizard/quickbook_operation_view.xml
+++ b/quickbooks_odoo_connector_canada/wizard/quickbook_operation_view.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="quickbooks_connector_vts.quickbooks_operations_form_view"/>
         <field name="arch" type="xml">
             <xpath expr="//sheet/p" position="before">
-                <p style="background-color: powderblue; padding: 10px;" invisible="import_operations != 'import_product'">
+                <p style="background-color: powderblue; padding: 10px;" invisible="import_operations != 'import_ca_product'">
                     <b>Notes: Import Product Process</b>
                     <ul>
                         <br/>
