--- a/quickbooks_odoo_connector_canada/views/qkb_product_map_view.xml
+++ b/quickbooks_odoo_connector_canada/views/qkb_product_map_view.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <odoo>
     <record id="view_qkb_product_ca_list" model="ir.ui.view">
         <field name="name">qbo.product.ca.map.vts.list</field>
