--- a/quickbooks_connector_vts/views/quickbook_view.xml
+++ b/quickbooks_connector_vts/views/quickbook_view.xml
@@ -79,7 +79,7 @@
                         </group>
                     </group>
                     <notebook>
-                        <page name="Credentials" string="Credentials">
+                        <page name="credentials" string="Credentials">
                             <group>
                             	<group>
 	                                <field name="client_id" required="1" readonly="state == 'connected'"/>
@@ -97,7 +97,7 @@
                             	</group>
                             </group>
                         </page>
-                        <page name="Import Configuration">
+                        <page name="import_configuration" string="Import Configuration">
                             <group>
                                 <group>
                                     <field name="customer_creation"/>
