--- a/quickbooks_odoo_connector_canada/views/qkb_product_map_view.xml
+++ b/quickbooks_odoo_connector_canada/views/qkb_product_map_view.xml
@@ -1,10 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
+    <record id="view_qkb_product_ca_form" model="ir.ui.view">
+        <field name="name">qbo.product.ca.map.form</field>
+        <field name="model">qbo.product.ca.map.vts</field>
+        <field name="arch" type="xml">
+            <form string="Quickbooks Product">
+                <sheet>
+                    <group>
+                        <field name="quickbook_instance_id" readonly="1"/>
+                        <field name="quickbook_product_id" readonly="1"/>
+                        <field name="quickbook_product_name" readonly="1"/>
+                        <field name="product_id"/>
+                        <field name="company_id"/>
+                        <field name="qbo_response" readonly="1"/>
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
     <record id="view_qkb_product_ca_list" model="ir.ui.view">
         <field name="name">qbo.product.ca.map.vts.list</field>
         <field name="model">qbo.product.ca.map.vts</field>
         <field name="arch" type="xml">
-            <list string="Quickbooks Account" editable="bottom">
+            <list string="Quickbooks Product" editable="bottom">
                 <field name="quickbook_instance_id" readonly="1"/>
                 <field name="quickbook_product_id" readonly="1"/>
                 <field name="quickbook_product_name" readonly="1"/>
