--- a/quickbooks_odoo_connector_canada/views/qkb_vendor_map_view.xml
+++ b/quickbooks_odoo_connector_canada/views/qkb_vendor_map_view.xml
@@ -1,10 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <record id="view_qkb_vendor_list" model="ir.ui.view">
-        <field name="name">qbo.vendor.vts.list</field>
-        <field name="model">qbo.vendor.vts</field>
+    <record id="view_qkb_vendor_ca_form" model="ir.ui.view">
+    <field name="name">qbo.vendor.ca.map.form</field>
+        <field name="model">qbo.vendor.ca.map.vts</field>
         <field name="arch" type="xml">
-            <list string="Quickbooks vendor" editable="bottom">
+            <form string="Quickbooks Vendor">
+                <sheet>
+                    <group>
+                        <field name="quickbook_instance_id" readonly="1"/>
+                        <field name="quickbook_vendor_id" readonly="1"/>
+                        <field name="quickbook_vendor_name" readonly="1"/>
+                        <field name="vendor_id"/>
+                        <field name="company_id"/>
+                        <field name="qbo_response" readonly="1"/>
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
+    <record id="view_qkb_vendor_ca_list" model="ir.ui.view">
+        <field name="name">qbo.vendor.ca.map.list</field>
+        <field name="model">qbo.vendor.ca.map.vts</field>
+        <field name="arch" type="xml">
+            <list string="Quickbooks Vendor" editable="bottom">
                 <field name="quickbook_instance_id" readonly="1"/>
                 <field name="quickbook_vendor_id" readonly="1"/>
                 <field name="quickbook_vendor_name" readonly="1"/>
@@ -13,14 +31,14 @@
             </list>
         </field>
     </record>
-    <record id="action_qkb_vendor_map" model="ir.actions.act_window">
+    <record id="action_qkca_vendor_ca_map" model="ir.actions.act_window">
         <field name="name">Quickbooks Vendor</field>
-        <field name="res_model">qbo.vendor.vts</field>
+        <field name="res_model">qbo.vendor.ca.map.vts</field>
         <field name="view_mode">list</field>
-        <field name="view_id" ref="view_qkb_vendor_list"/>
+        <field name="view_id" ref="view_qkb_vendor_ca_list"/>
     </record>
-    <menuitem id="menu_qkb_product"
-              name="Product"
+    <menuitem id="menu_qkca_vendor"
+              name="Vendor"
               parent="quickbooks_connector_vts.main_mapping_menu"
-              action="action_qkb_vendor_map" sequence="10"/>
+              action="action_qkca_vendor_ca_map" sequence="2"/>
 </odoo>
