--- a/quickbooks_odoo_connector_canada/views/quickbooks_view.xml
+++ b/quickbooks_odoo_connector_canada/views/quickbooks_view.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <record id="view_quickbooks_canada_form_inherit" model="ir.ui.view">
-        <field name="name">quickbooks.canada.connect.inherit.form</field>
+    <record id="quick_canada_form_inherit_vts" model="ir.ui.view">
+        <field name="name">quickbooks.connect.ca.inherit.form</field>
         <field name="model">quickbooks.connect</field>
         <field name="inherit_id" ref="quickbooks_connector_vts.quickbooks_connect_form_view"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='account_creation']" position="after">
+            <xpath expr="//page[@name='import_configuration']/group/group[1]" position="inside">
                 <field name="qkca_product_creation"/>
                 <field name="qkca_vendor_creation"/>
                 <field name="qkca_category_creation"/>
             </xpath>
-            <xpath expr="//div[@class='oe_button_box']" position="inside">
+            <xpath expr="//sheet/div[@name='button_box']" position="inside">
                 <button name="action_qkb_product"
                         type="object"
                         class="oe_stat_button"
