--- a/quickbooks_odoo_connector_canada/wizard/quickbook_operation_view.xml
+++ b/quickbooks_odoo_connector_canada/wizard/quickbook_operation_view.xml
@@ -17,8 +17,6 @@
                         </li>
                     </ul>
                 </p>
-            </xpath>
-            <xpath expr="//sheet/p" position="before">
                 <p style="background-color: powderblue; padding: 10px;" invisible="import_operations != 'import_vendor'">
                     <b>Notes: Import Vendor Process</b>
                     <ul>
@@ -27,6 +25,17 @@
                         <li>
                             <b>Date Filter :</b>
                             Only vendor created between <span id="date-from">[Start Date]</span> and <span id="date-to">[End Date]</span> were fetched.
+                        </li>
+                    </ul>
+                </p>
+                <p style="background-color: powderblue; padding: 10px;" invisible="import_operations != 'import_pro_category'">
+                    <b>Notes: Import Product Category Process</b>
+                    <ul>
+                        <br/>
+                        <li>Fetched Category from QuickBooks using API with applied filter.</li>
+                        <li>
+                            <b>Date Filter :</b>
+                            Only category created between <span id="date-from">[Start Date]</span> and <span id="date-to">[End Date]</span> were fetched.
                         </li>
                     </ul>
                 </p>
