--- a/quickbooks_odoo_connector_canada/views/quickbooks_view.xml
+++ b/quickbooks_odoo_connector_canada/views/quickbooks_view.xml
@@ -34,6 +34,17 @@
                         </span>
                     </div>
                 </button>
+                <button name="action_qkb_invoice"
+                        type="object"
+                        class="oe_stat_button"
+                        icon="fa-dollar">
+                    <div class="o_field_widget o_stat_info">
+                        <span class="o_stat_text">Invoice</span>
+                        <span class="o_stat_value">
+                            <field name="qca_invoice_count"/>
+                        </span>
+                    </div>
+                </button>
             </xpath>
         </field>
     </record>
