--- a/quickbooks_odoo_connector_canada/views/quickbooks_view.xml
+++ b/quickbooks_odoo_connector_canada/views/quickbooks_view.xml
@@ -10,6 +10,7 @@
                 <field name="qkca_vendor_creation"/>
                 <field name="qkca_category_creation"/>
                 <field name="qkca_invoice_creation"/>
+                <field name="qkca_bill_creation"/>
             </xpath>
             <xpath expr="//sheet/div[@name='button_box']" position="inside">
                 <button name="action_qkb_product"
