--- a/quickbooks_odoo_connector_canada/wizard/quickbook_operation_view.xml
+++ b/quickbooks_odoo_connector_canada/wizard/quickbook_operation_view.xml
@@ -61,6 +61,32 @@
                         </li>
                     </ul>
                 </p>
+                <p style="background-color: powderblue; padding: 10px;" invisible="import_operations != 'import_customer_payment'">
+                    <b>Notes: Import Payment Process</b>
+                    <ul>
+                        <br/>
+                        <li>Fetched Payment from QuickBooks using API with applied filter.</li>
+                        <li>
+                            <b>Date Filter :</b>
+                            Only payment created between <span id="date-from">[Start Date]</span> and <span
+                                id="date-to">[End Date]
+                        </span> were fetched.
+                        </li>
+                    </ul>
+                </p>
+                <p style="background-color: powderblue; padding: 10px;" invisible="import_operations != 'import_billpayment'">
+                    <b>Notes: Import Vendor Payment Process</b>
+                    <ul>
+                        <br/>
+                        <li>Fetched Vender Payment from QuickBooks using API with applied filter.</li>
+                        <li>
+                            <b>Date Filter :</b>
+                            Only bill payment created between <span id="date-from">[Start Date]</span> and <span
+                                id="date-to">[End Date]
+                        </span> were fetched.
+                        </li>
+                    </ul>
+                </p>
             </xpath>
         </field>
     </record>
