[ADD] Export Process of Customer, Vendor, Account and Terms

--- a/quickbooks_odoo_connector_canada/views/account_payment_view.xml
+++ b/quickbooks_odoo_connector_canada/views/account_payment_view.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
-<!--    filter for customer payment-->
+    <!--    filter for customer payment-->
     <record id="view_customer_payment_filter" model="ir.ui.view">
         <field name="name">customer.payment.filter.inherit</field>
         <field name="model">account.payment</field>
@@ -17,12 +17,21 @@
                 <filter string="Quickbooks Payment" name="group_by_quickbook_bill"
                         context="{'group_by':'qck_instance_id'}"/>
             </xpath>
+        </field>
+    </record>
+
+    <!--     filter for vendor payment -->
+    <record id="view_bill_payment_filter" model="ir.ui.view">
+        <field name="name">vendor.bill.payment.filter.inherit</field>
+        <field name="model">account.payment</field>
+        <field name="inherit_id" ref="account.view_account_payment_search"/>
+        <field name="arch" type="xml">
             <xpath expr="//filter[@name='quickbook_customer_payment']" position="after">
                 <filter string="Quickbook Bill Payment"
                         name="quickbook_bill_payment"
                         domain="[('qkca_billpay_ID', '!=', False)]"/>
             </xpath>
-             <xpath expr="//filter[@name='group_by_quickbook_bill']" position="after">
+            <xpath expr="//filter[@name='group_by_quickbook_bill']" position="after">
                 <filter string="Quickbooks Bill Payment" name="group_by_quickbook_bill_payment"
                         context="{'group_by':'qck_instance_id'}"/>
             </xpath>
