--- a/quickbooks_odoo_connector_canada/views/quickbooks_view.xml
+++ b/quickbooks_odoo_connector_canada/views/quickbooks_view.xml
@@ -13,6 +13,7 @@
                 <field name="qkca_bill_creation"/>
                 <field name="qkca_payment_creation"/>
                 <field name="qkca_bill_payment_creation"/>
+                <field name="company_included_tax"/>
             </xpath>
             <xpath expr="//sheet/div[@name='button_box']" position="inside">
                 <button name="action_qkb_product"
